refactor: adapt to java 17